@@ -13,6 +13,7 @@
 """SMTP mail objects
 """
 import logging
+import os
 from os.path import realpath
 import re
 from cStringIO import StringIO
@@ -338,7 +339,8 @@ class MailBase(Implicit, Item, RoleManager):
         else:
             if self.smtp_queue:
                 # Start queue processor thread, if necessary
-                self._startQueueProcessorThread()
+                if not os.environ.get('MAILHOST_QUEUE_ONLY', False):
+                    self._startQueueProcessorThread()
                 delivery = QueuedMailDelivery(self.smtp_queue_directory)
             else:
                 delivery = DirectMailDelivery(self._makeMailer())
